Add Job for testing with JDK 11, no trigger yet as it does not fully work yet
git-svn-id: https://svn.apache.org/repos/asf/poi/trunk@1838359 13f79535-47bb-0310-9956-ffa450edef68